--- a/Demo.Languages2/Demo.Languages2.AngularJS.MultipleControllerTest/Views/Home/Index.cshtml
+++ b/Demo.Languages2/Demo.Languages2.AngularJS.MultipleControllerTest/Views/Home/Index.cshtml
@@ -10,12 +10,14 @@
 	<script src="~/Scripts/directives/area2.js"></script>
 
 	<script>
-		// http://stackoverflow.com/a/34427511/4035
-		var myApp = myApp || {};
-		myApp.Urls = myApp.Urls || {};
-		myApp.Urls.baseUrl = '@Url.Content("~")';
+		(function () {
+			// http://stackoverflow.com/a/34427511/4035
+			var myApp = myApp || {};
+			myApp.Urls = myApp.Urls || {};
+			myApp.Urls.baseUrl = '@Url.Content("~")';
 
-		var a = angular.module("app").value("appSettings", myApp);
+			var a = angular.module("app").value("appSettings", myApp);
+		})();
 	</script>
 
 }
