added a type script file

--- a/Demo.Languages2/Demo.Languages2.AngularJS.MultipleControllerTest/Views/Home/Index.cshtml
+++ b/Demo.Languages2/Demo.Languages2.AngularJS.MultipleControllerTest/Views/Home/Index.cshtml
@@ -3,6 +3,7 @@
 	ViewBag.Title = "Index";
 }
 @section Scripts{
+	<script src="~/Scripts/TypeScripts/reverse.js"></script>
 	<script src="~/Scripts/angular.js"></script>
 	<script src="~/Scripts/app.js"></script>
 	<script src="~/Scripts/app-outerCtrl.js"></script>
