--- a/Demo.Languages2/Demo.Languages2.ReactJS/Views/Home/Index.cshtml
+++ b/Demo.Languages2/Demo.Languages2.ReactJS/Views/Home/Index.cshtml
@@ -1,17 +1,18 @@
 ﻿
 @{
-    ViewBag.Title = "Index";
+	ViewBag.Title = "Index";
 }
 
-@section CSS 
+@section CSS
 {
 
 }
 
 @section Scripts
 {
-	
+	<script src="~/Scripts/react/react-0.13.1.js"></script>
+	<script src="@Url.Content("~/Scripts/script.jsx")"></script>
 }
 
-<h2>Index</h2>
+<div id="root"></div>
 
