--- a/Demo.Languages2/Demo.Languages2.ReactJS/Views/Shared/_Layout.cshtml
+++ b/Demo.Languages2/Demo.Languages2.ReactJS/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
 		</footer>
 	</div>
 
-	<script src="~/Scripts/jquery-1.10.2.min.js"></script>
+	<script src="~/Scripts/jquery-2.2.0.js"></script>
 	<script src="~/Scripts/bootstrap.min.js"></script>
 
 	@RenderSection("Scripts", false)
