--- a/Demo.Languages2/Demo.Languages2.ReactJS/Views/Home/Index.cshtml
+++ b/Demo.Languages2/Demo.Languages2.ReactJS/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
 
 @section Scripts
 {
-	<script src="~/Scripts/react/react-0.13.1.js"></script>
+	<script src="@Url.Content("~/Scripts/react/react-0.13.1.js")"></script>
 	<script src="@Url.Content("~/Scripts/script.jsx")"></script>
 }
 
