--- a/Demo.Languages2/Demo.Languages2.ReactJS/Views/Home/Card.cshtml
+++ b/Demo.Languages2/Demo.Languages2.ReactJS/Views/Home/Card.cshtml
@@ -10,6 +10,6 @@
 @section Scripts
 {
 	<script src="@Url.Content("~/Scripts/react/react-0.13.1.js")"></script>
-	<script src="@Url.Content("~/Scripts/script.jsx")"></script>
+	<script src="@Url.Content("~/Scripts/cardScript.jsx")"></script>
 }
 <div id="root"></div>
