--- a/Demo.Languages2/Demo.Languages2.ReactJS/Views/Home/Game.cshtml
+++ b/Demo.Languages2/Demo.Languages2.ReactJS/Views/Home/Game.cshtml
@@ -4,12 +4,15 @@
 
 @section CSS
 {
+	<link href="@Url.Content("~/Content/game.css")" rel="stylesheet" />
 }
+
 @section Scripts
 {
+	<script src="@Url.Content("~/Scripts/bootstrap.js")"></script>
 	<script src="@Url.Content("~/Scripts/react/react-0.13.1.js")"></script>
 	<script src="@Url.Content("~/Scripts/react/JSXTransformer-0.13.1.js")"></script>
 	<script type="text/jsx" src="@Url.Content("~/Scripts/gameScript.jsx")"></script>
 }
 
-
+<div id="container" class="container"></div>
