--- a/Demo.Languages2/Demo.Languages2.ReactJS/Views/Home/Index.cshtml
+++ b/Demo.Languages2/Demo.Languages2.ReactJS/Views/Home/Index.cshtml
@@ -12,7 +12,9 @@
 {
 	<script src="@Url.Content("~/Scripts/react/react-0.13.1.js")"></script>
 	<script src="@Url.Content("~/Scripts/script.jsx")"></script>
+	<script src="@Url.Content("~/Scripts/jsx/stateless-test.jsx")"></script>
 }
 
 <div id="root"></div>
+<div id="react-application"></div>
 
